# FireFly

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
config/: config.ini
diagrams/: class_diagram.puml
src/: CMakeLists.txt
src/Core/: AppConfig.cpp  AppConfig.h  CMakeLists.txt  main.cpp
src/GUI/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
src/ImageProcessing/: CMakeLists.txt  Capture.cpp  Capture.h  Processor.cpp  Processor.h
src/scripts/: build  build_tests  clean  run  run_tests
tests/: CMakeLists.txt  test_AppConfig.cpp
